--- a/m3u8/package.json
+++ b/m3u8/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "koa": "^2.13.0",
+    "koa-route": "^3.2.0",
+    "koa-router": "^9.4.0"
   }
 }
