--- a/eslint-demo/package.json
+++ b/eslint-demo/package.json
@@ -7,18 +7,23 @@
     "start": "node script/script.js",
     "eslint-init": "eslint --init",
     "fix": "eslint --ext .js --ext .vue src --fix",
-    "lint": "eslint --ext .js --ext .vue src",
+    "lint": "eslint --ext .js,.ts --ext .vue src",
     "postinstall": "node "
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.1.0",
+    "@typescript-eslint/parser": "^4.1.0",
     "eslint": "^7.8.1",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^6.2.2"
+    "eslint-plugin-vue": "^6.2.2",
+    "typescript": "^4.0.2"
   }
 }
